@@ -156,8 +156,7 @@ for more information.  This task has been tested with jsch-0.1.2 and later.</p>
   <tr>
     <td valign="top">passphrase</td>
      <td valign="top">Passphrase for your private key.</td>
-     <td valign="top" align="center">Yes, if you are using key based
-     authentication.</td>
+     <td valign="top" align="center">No, defaults to an empty string.</td>
   </tr>
   <tr>
     <td valign="top">verbose</td>
